--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,21 @@ body {
   color: var(--background);
   font-family: Arial, Helvetica, sans-serif ;
 }
+
+.aboutHero{
+  background: url(../../public/Images/about.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.aboutHero::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+}
